# fastZIP

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README.md  README_zh.md  build-installer.bat  build.rs  install-fastzip.bat  run-fastzip.bat
.github/workflows/: ci.yml  release.yml
assets/: fastzip.desktop
benches/: archive_backend.rs
docs/: README_ar.md  README_de.md  README_es.md  README_fr.md  README_it.md  README_ja.md  README_ko.md  README_pt-BR.md  README_ru.md  README_tr.md  README_zh.md
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: I18nProvider.tsx  Layout.tsx  SideNav.tsx  TitleBar.tsx  Toast.tsx  UpdateDialog.tsx
frontend/src/hooks/: useI18n.ts  useTauriEvent.ts  useTheme.ts
frontend/src/pages/: BenchmarkPage.tsx  CompressPage.tsx  ExtractPage.tsx  FileManagerPage.tsx  LogsPage.tsx  SettingsPage.tsx  TasksPage.tsx
frontend/src/state/: settingsStore.ts  taskStore.ts  uiStore.ts
frontend/src/types/: index.ts
installer/: FastZIP.iss
locales/: ar.tsv  de.tsv  es.tsv  fr.tsv  it.tsv  ja.tsv  ko.tsv  pt-BR.tsv  ru.tsv  tr.tsv
src/: amsi.rs  benchmark.rs  encoding.rs  gui.rs  hash.rs  lib.rs  localization.rs  main.rs  serde_helpers.rs  settings.rs  update.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/archive/: iso.rs  mod.rs  native.rs  rar.rs  service.rs  sfx.rs  test.rs  wim.rs
src/gui/: app.rs  mod.rs
src/tauri_commands/: archive_commands.rs  benchmark_commands.rs  file_manager_commands.rs  hash_commands.rs  mod.rs  settings_commands.rs  update_commands.rs
tools/: build-installer.ps1  configure-fastzip-windows.ps1  fastzip-windows-common.ps1  install-fastzip-linux.sh  install-fastzip-windows.ps1  register-fastzip-windows.ps1  uninstall-fastzip-windows.ps1  unregister-fastzip-windows.ps1  zip_compare.ps1  zip_perf.ps1
